--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
