--- a/angular.json
+++ b/angular.json
@@ -16,9 +16,7 @@
             "outputPath": "dist/event-craft-frontend-customer",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -51,9 +49,7 @@
                 }
               ],
               "outputHashing": "all",
-              "allowedCommonJsDependencies": [
-                "aos"
-              ]
+              "allowedCommonJsDependencies": ["aos"]
             },
             "development": {
               "optimization": false,
@@ -81,10 +77,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -94,7 +87,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/aos/dist/aos.css"
             ],
             "scripts": []
           }
